# Tarea_Final_IA

./: .pre-commit-config.yaml  LICENSE  README.md  init_template.sh  pyproject.toml  resultados.ipynb
Agentes/: A2C1.pt  A2C2.pt  A2C3.pt  A2C_LSTM4.pt  DuelingDQN1.pt  Qlearning3.pkl
QTables/: A2C_LSTM1.pt  A2C_LSTM2.pt  A2C_LSTM3.pt  DeepQNetwork1.pt  QLearning1.pt
resultados/: resultado_A2C_LSTM.csv  resultado_A2C_LSTM_1.csv  resultado_A2C_LSTM_2.csv  resultado_A2C_LSTM_3.csv  resultado_A2C_LSTM_4.csv  resultado_DQN.csv  resultado_DuelingDQN.csv  resultado_QL.csv  resultado_QL_2.csv  resultado_todos.csv  resultados_A2C.csv  resultados_arco_de_entrenamiento_A2C.csv  resultados_arco_de_entrenamiento_A2C_LSTM.csv  resultados_arco_de_entrenamiento_DQN.csv  resultados_arco_de_entrenamiento_QLearning.csv  resultados_arco_de_entrenamiento_duelingDQN.csv  resultados_arco_de_entrenamiento_dueling_primero.csv  resultados_arco_de_entrenamiento_dueling_segundo.csv
src/: arco_de_entrenamiento.py  controlador_duelos.py  elecciones.py  main.py
src/rl_tuning/: Politicas.csv  Tuneo.csv  crecimiento  tuning_RL.ipynb  tuning_functions.py
src/selectores_de_oponentes/: __init__.py  base_selector_de_oponentes.py  selector_AllForOne.py  selector_pvp.py  selector_random.py
src/strategies/: __init__.py  base_class.py  davis.py  feld.py  grofman.py  q_learning.py  random.py  siempre_coopera.py  siempre_traiciona.py  stein_rapoport.py  tideman_chieruzzi.py
src/test/: test_graaskamp.py  test_nydegger.py  (+3 more)
test/: test_tideman_chieruzzi.py  test_torneo_entrenamiento.py  test_tullock.py
(+31 files in other folders)
